scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sketchpad-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sketchpad
