scripts/sketchpad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sketchpad
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
      - name: sketchpad-site
        image: ajeyaunoff/docker-staticwebpage:latest
---
apiVersion: v1
kind: Service
metadata:
  name: sketchpad-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    bb: web
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 80
